--- a/kustomize-apps/overlays/production/config-map.yaml
+++ b/kustomize-apps/overlays/production/config-map.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: my-configuration
 data:
-  mysqlDB: "production-mysql.example.com:3306"
+  mysqlDB: "prod-mysql.example.com:3306"
  
